Fix header-logo and header-link alignment

--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,13 @@ body {
 
 
 .header-logo {
- margin-left: 250px;
+ margin-left: 485px;
 font-size: 24px;
 color: #F9FAF8;
 }
 
 .header-links {
-    margin-right: 250px;
+    margin-right: 485px;
 }
 
 ul {
